updating versions